# lcd-colour-crunch

./: CHANGELOG.md  CMakeLists.txt  README.md  main.c  right.gim  right.txt
pspemu-colour-crunch/: CMakeLists.txt  pspemu-colour-crunch.c  pspemu-colour-crunch.yml
